0.2 2022-11-17 lichtkind
--------
    * = init release

0.1 2022-11-17 lichtkind
--------
    * = init release
    * + contains unifont version 14.04